I made the tech stack Icons wrap on smaller screens which should prevent it from jutting out on mobile phone viewports. I also made a small edit to the resume.

--- a/React_Portfolio/src/App.css
+++ b/React_Portfolio/src/App.css
@@ -473,6 +473,7 @@ textarea:focus {
 .techStack {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .techStackIcon {
